# sonarqube-modules

./: .gitignore  latexmkrc  main.tex  references.bib
graph/: animate.py  building.json  changed.json  ptraced.mermaid  regenerate.sh
snippets/: .clang-format
snippets/compdb/: CMakeLists.txt  CMakePresets.json  build.sh  compile_commands.json  main.cpp
snippets/cpp17/: build.sh  library.cpp  library.h  main  main.cpp
snippets/cpp20/: build.sh  library.cppm  main.cpp
